2015-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (process_remaining_on_line) <@value> Add element to 
	tree for unexpanded value.
	* api.c (element_to_perl_hash): Output 'type' as name for 
	unexpanded @value.

2015-06-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/Parsetexi.xs,
	* api.c (build_global_info): New function.
	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Fetch the 
	"global information," including the @documentencoding.

	* parser.c (global_info): New struct variable.
	* end_line.c (end_line_misc_line) <@documentencoding> Save 
	document encoding.

2015-04-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (end_line_starting_block): Call 
	register_command_arg.
	* parser.c (process_remaining_on_line) <command with command as 
	argument, like @itemize @bullet>: Set command_as_argument extra 
	value.

2015-04-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parser): Add code to receive 
	"values" configuration value.
	(parse_texi_line): First implementation.
	* Parsetexi/Parsetexi.xs (parse_string, store_value)
	(wipe_values): Expose.
	* api.c (parse_string): New function.
	* macro.c (wipe_values): New function.

2015-04-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (parse_line_command_args) <CM_synindex>: Record
	index synonym.
	* api.c (build_single_index_data): Create "contained_indices" 
	and "merged_in".

2015-03-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): Add extra_def_args.
	(DEF_ARGS_EXTRA): New type.
	* api.c (element_to_perl_hash),
	* dump_perl.c (dump_extra): Handle extra_def_args.
	* def.c (parse_def, next_bracketed_or_word): First 
	implementations.
	* end_line.c <ET_def_line>: Call parse_def.  Don't record the 
	index entry yet.

2015-03-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* close.c (close_command_cleanup): @multitable handling.

2015-03-07  Gavin Smith  <gavinsmith0123@gmail.com>
