@@ -2,9 +2,9 @@ This is an experimental program intended to replicate the functionality
 in tp/Texinfo/Parser.pm.  How it will be integrated into makeinfo is 
 still unknown.
 
-makeinfo in this directory wraps texi2any-C.pl, which is tp/texi2any.pl 
-changed to use the module in the Parsetexi subdirectory instead of 
-Texinfo::Parser.
+makeinfo in this directory wraps texi2any-C-2.pl, which is 
+tp/texi2any.pl changed to use the module in the Parsetexi subdirectory 
+instead of Texinfo::Parser.
 
 =====================================================================
 Notes -
