@@ -4,6 +4,7 @@
 #DEBUG='perl -d:NYTProf'
 #OPTIONS='-c DEBUG=1 --no-validate'
 #VALGRIND='valgrind --vgdb-error=0'
-COMMAND=${COMMAND:-./texi2any-C.pl}
+#COMMAND=${COMMAND:-./texi2any-C.pl}
+COMMAND=${COMMAND:-./texi2any-C-2.pl}
 
 PERL5LIB=../tp:../tp/maintain/lib/libintl-perl/lib:../tp/maintain/lib/Text-Unidecode/lib/:../tp/maintain/lib/Unicode-EastAsianWidth/lib:./Parsetexi/lib:./Parsetexi/blib/lib:./Parsetexi/blib/arch/auto/Parsetexi:../tp/Texinfo/Convert/XSParagraph/lib:../tp/Texinfo/Convert/XSParagraph/blib/arch/auto/XSParagraph ${VALGRIND} ${DEBUG} ${COMMAND} ${OPTIONS} "$@"
